# telegram-resender

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  config-example.yml  pyproject.toml
.github/workflows/: release.yml
docs/: TODO.md
docs/plans/: 20260611-per-chat-dedup-and-debounce.md  20260618-configurable-message-and-debounce-cancel.md
docs/plans/completed/: 20260618-configurable-message-and-debounce-cancel.md
src/: app.py  bulk.py  config.py  debounce.py  seen_chats.py  telegram_utils.py
tests/: conftest.py  test_bulk.py  test_cancel_on_owner_reply.py  test_config.py  test_debounce.py  test_main_flow.py  test_seen_chats.py  test_telegram_utils.py
